[package]
name = "rest-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
juniper = "0.15"
juniper_warp = "0.7"
tokio = { version = "1", features = ["full"] }
tonic = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
warp = "0.3"

furink-proto = { git = "https://github.com/furinkapp/proto-rust.git", branch = "main" }
